[package]
name = "splash"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { version = "0.53.2", features = [ "tokio", "gossipsub", "kad", "noise", "macros", "identify", "tcp", "yamux", "secp256k1"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10.1"
clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
