[package]
name = "splash"
version = "0.0.11"
edition = "2021"
authors = ["dns <dns@dexie.space>"]
description = "A decentralized network for sharing offers across the Chia ecosystem"
license = "MIT"
homepage = "https://dexie.space/splash"
repository = "https://github.com/dexie-space/splash"
keywords = ["p2p", "dexie", "chia", "blockchain", "crypto"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3.30"
libp2p = { version = "0.54.0", features = [ "tokio", "gossipsub", "kad", "noise", "macros", "identify", "tcp", "yamux", "secp256k1"] }
clap = { version = "4.4.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
warp = "0.3.6"
bech32 = "0.9.1"
hickory-resolver = "0.24.1"
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.5"
